
** removed SnpLevelClasses Vignette and supporting documents in inst/doc
** added man/Snp-methods.Rd 
** added man/list.cefiles.Rd

12-23-2009 - R. Scharpf committed v 1.9.21

** removed IRanges dependency.  Added a few .Rd files.  Note IRanges
   is still loaded because of Biostrings dependency on IRanges.  Do we
   need Biostrings?

12-30-2009 - R. Scharpf committed v 1.9.22

** removed segmentData from initialization method for CNSet objects

01-23-2010 - B. Carvalho committed v 1.9.25

** exported bothStrands()

01-28-2010 - B. Carvalho committed v 1.9.26

** changed confs() slightly to agree with oligo

02-07-2010 - B. Carvalho (1.9.27)

** Updated requirement on affyio so Win64 is supported

02-20-2010 - R. Scharpf (1.9.28)

** Added CopyNumberSet class as a container for total copy number with
   no slots for genotypes. (Mainly for use with VanillaICE)

** Defined methods for db, chromosome, position, and isSnp at the
   level of eSet (formerly, these were defined at the SnpSet level). I
   did this so that CopyNumberSet, which extends eSet directly, could
   inherit these methods

02-20-2010 - R. Scharpf (1.9.29)

** modified initialization method for SnpSet.  I would have preferred
   to modify the initialization in VanillaICE, but I had problems with
   this

02-20-2010 - R. Scharpf (1.9.30)

** moved A, B accessors from crlmm to oligoClasses.  Updated a few of the man pages.
** added oligoClasses.Rnw vignette

03-04-2010 - B Carvalho (1.9.32)

** exposed DBPDInfo, ExpressionPDInfo, FeatureSet, TilingPDInfo
** fixed NEWS file

03-10-2010 - R.Scharpf (1.9.35)

** export A<-, B<- for AlleleSet

03-10-2010 - B Carvalho (1.9.37)

** adding ff utilities to be used in oligo and crlmm
** adding tools to diagnose cluster/large dataset support
** (1.9.39) fixed broken export and added p2i/i2p functions to simplify future changes on the conversion
** (1.9.40) fixed oligoProbeset/oligoSamples to be ocProbesets/ocSamples
** (1.9.41) fixed unload / docs